--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,13 @@
     font-family: "Nunito", sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Nunito", sans-serif;
+}
+
 button {
     border: none;
     outline: none;
