--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Nunito", sans-serif;
+}
 
 * {
     box-sizing: border-box;
@@ -111,4 +117,3 @@ button {
     padding: 8px 0;
     background: #3a2b58;
 }
-
